# caramelo_hardware_ws

./: .gitignore  encoder_read.cpp  motorMaxon_write.cpp
src/caramelo_description/: CMakeLists.txt  package.xml
src/caramelo_description/launch/: display.launch.py
src/caramelo_description/urdf/: common_properties.xacro  lidar_sensor.xacro  mecanum_wheel.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  robot.urdf.xacro
src/caramelo_hardware/: CMakeLists.txt  caramelo_hardware_interface.xml  caramelo_hw_interface.xml  package.xml
src/caramelo_hardware/include/caramelo_hardware/: maxon_gpio_driver.hpp  maxon_motors_node.hpp  mobile_base_hw_interface.hpp  mobile_base_hw_parser.hpp  xm430_driver.hpp
src/caramelo_hardware/src/: maxon_gpio_driver.cpp  maxon_motors_node.cpp  mobile_base_hw_interface.cpp  mobile_base_hw_parser.cpp
src/raspberry_bringup/: CMakeLists.txt  package.xml
src/raspberry_bringup/config/: caramelo_controllers.yaml
src/raspberry_bringup/launch/: hardware_bringup.launch.py
